FIX: Radio button too small

--- a/Application/Server/static/style.css
+++ b/Application/Server/static/style.css
@@ -42,6 +42,11 @@ ol li::marker{
   font-weight: 600;
 }
 
+input[type="radio"] {
+  -ms-transform: scale(2);
+  -webkit-transform: scale(2);
+  transform: scale(2);
+}
 
 
 /* Buttons */
@@ -714,6 +719,14 @@ datalist {
 .bin-settings {
   width: 100%;
   padding: 5%;
+  font-size: 1.4vw;
+  font-weight: 600;
+}
+
+@media only screen and (orientation: portrait) {
+  .bin-settings {
+    font-size: 2.7vw;
+  }
 }
 
 
